--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="text/javascript" src="script.js"></script>
     <title>Tarkov PC Spec / FrameRate</title>
 </head>
 <body>
-    <input type="button" style="opacity: 20%;" value="SEARCH">
+    <!-- <input type="button" style="opacity: 20%;" value="SEARCH"> -->
     <h2>ESCAPE FROM TARKOV BENCHMARK RESULT</h2>
     <table>
         <caption>
-            Last modified : 2023-03-29
+            Last modified : 2023-05-19
         </caption>
         <thead>
             <tr>
@@ -41,7 +42,7 @@
             <td style="font-weight: bold;">209</td>
             <td style="font-weight: bold;">77</td>
             <td>1440P | QHD</td>
-            <td><button onclick = "window.open('https://www.youtube.com/watch?v=KNCCvIdb-_Q&ab_channel=pyurologie')">RESOURSE</button></td>
+            <td><button onclick = "window.open('https://www.youtube.com/watch?v=KNCCvIdb-_Q&ab_channel=pyurologie')">RESOURCE</button></td>
         </tr>
         <tr> <!--두번째 줄-->
             <td>WEEKLY</td>
@@ -54,7 +55,7 @@
             <td style="font-weight: bold;">194</td>
             <td style="font-weight: bold;">61</td>
             <td>1440P | QHD</td>
-            <td><button onclick="window.open('https://www.youtube.com/watch?v=4nVu8iG0N3M')">RESOURSE</button></td>
+            <td><button onclick="window.open('https://www.youtube.com/watch?v=4nVu8iG0N3M')">RESOURCE</button></td>
 
         </tr>
         <tr> <!--세번째 줄-->
@@ -175,95 +176,95 @@
             <td><button onclick="window.open('https://www.youtube.com/watch?v=HdWaDhlDHH4')">RESOURCE</button></td>
         </tr>
         <tr>
-            <td>Pyurologie</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td>a</td>
-            <td>a</td>
+            <td>NIGHT</td>
+            <td>PMC</td>
+            <td>7800x3D</td>
+            <td>RTX 3060</td>
+            <td>DDR5-6000 CL26</td>
+            <td>SHORELINE <br> RESORT</td>
+            <td style = "font-weight: bold;">145</td>
+            <td style = "font-weight: bold;">165</td>
+            <td style = "font-weight: bold;">100</td>
+            <td>1440P | QHD</td>
+            <td><button onclick="window.open('https://www.youtube.com/watch?v=5syQrp4fAYQ&ab_channel=pyurologie')">RESOURCE</button></td>
         </tr>
         <tr>
-            <td>Pyurologie</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td>a</td>
-            <td>a</td>
+            <td>WEEKLY</td>
+            <td>SCAV</td>
+            <td>7800x3D</td>
+            <td>RTX 3060</td>
+            <td>DDR5-6000 CL26</td>
+            <td>LIGHTHOUSE</td>
+            <td style = "font-weight: bold;">132</td>
+            <td style = "font-weight: bold;">139</td>
+            <td style = "font-weight: bold;">88</td>
+            <td>1080P | FHD</td>
+            <td></td>
         </tr>
         <tr>
-            <td>Pyurologie</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td>a</td>
-            <td>a</td>
+            <td>WEEKLY</td>
+            <td>PMC</td>
+            <td>7800x3D</td>
+            <td>RTX 4070</td>
+            <td>DDR5-6000 CL30</td>
+            <td>STREET</td>
+            <td style = "font-weight: bold;">138</td>
+            <td style = "font-weight: bold;">218</td>
+            <td style = "font-weight: bold;">62</td>
+            <td>1440P | QHD</td>
+            <td></td>
         </tr>
         <tr>
-            <td>Pyurologie</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td>a</td>
-            <td>a</td>
+            <td>WEEKLY</td>
+            <td>SCAV</td>
+            <td>I9-13900K 5.8Ghz OC</td>
+            <td>RTX 3060</td>
+            <td>DDR5-8200 CL34</td>
+            <td>LIGHTHOUSE</td>
+            <td style = "font-weight: bold;">134</td>
+            <td style = "font-weight: bold;">148</td>
+            <td style = "font-weight: bold;">65</td>
+            <td>1080P | FHD</td>
+            <td><button onclick="window.open('https://www.youtube.com/watch?v=cNoehJBb8C8&ab_channel=pyurologie')">RESOURCE</button></td>
         </tr>
         <tr>
-            <td>Pyurologie</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td>a</td>
-            <td>a</td>
+            <td>WEEKLY</td>
+            <td>PMC</td>
+            <td>7800x3D</td>
+            <td>RTX 3060</td>
+            <td>DDR5-6000 CL36</td>
+            <td>STREET</td>
+            <td style = "font-weight: bold;">148</td>
+            <td style = "font-weight: bold;">201</td>
+            <td style = "font-weight: bold;">65</td>
+            <td>1080P | FHD</td>
+            <td><button onclick="window.open('https://www.youtube.com/watch?v=YMPzsrkt-bc&ab_channel=pyurologie')">RESOURCE</button></td>
         </tr>
         <tr>
-            <td>Pyurologie</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td>a</td>
-            <td>a</td>
+            <td>WEEKLY</td>
+            <td>PMC</td>
+            <td>5800x3D</td>
+            <td>RTX 4080</td>
+            <td>DDR4-4000 CL14</td>
+            <td>LIGHTHOUSE</td>
+            <td style = "font-weight: bold;">138</td>
+            <td style = "font-weight: bold;">184</td>
+            <td style = "font-weight: bold;">68</td>
+            <td>2160P | 4K</td>
+            <td><button onclick="window.open('https://www.youtube.com/watch?v=6sg-S33Cozg&ab_channel=pyurologie')">RESOURCE</button></td>
         </tr>
         <tr>
-            <td>Pyurologie</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td style = "font-weight: bold;">a</td>
-            <td>a</td>
-            <td>a</td>
+            <td>WEEKLY</td>
+            <td>PMC</td>
+            <td>I5-13600K</td>
+            <td>RTX 4070</td>
+            <td>DDR5-8000 CL38</td>
+            <td>STREET</td>
+            <td style = "font-weight: bold;">149</td>
+            <td style = "font-weight: bold;">167</td>
+            <td style = "font-weight: bold;">92</td>
+            <td>1440P | QHD</td>
+            <td><button onclick="window.open('https://www.youtube.com/watch?v=2wuGdzOdxhM&ab_channel=pyurologie')">RESOURCE</button></td>
         </tr>
     </tbody>
         </table>
