--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <td style = "font-weight: bold;">139</td>
             <td style = "font-weight: bold;">88</td>
             <td>1080P | FHD</td>
-            <td></td>
+            <td><button onclick="window.open('https://www.youtube.com/watch?v=FFHiGPBoTp8&ab_channel=pyurologie')">RESOURCE</button></td>
         </tr>
         <tr>
             <td>WEEKLY</td>
@@ -209,7 +209,7 @@
             <td style = "font-weight: bold;">218</td>
             <td style = "font-weight: bold;">62</td>
             <td>1440P | QHD</td>
-            <td></td>
+            <td><button onclick="window.open('https://www.youtube.com/watch?v=X5BNbZax8pk&ab_channel=pyurologie')">RESOURCE</button></td>
         </tr>
         <tr>
             <td>WEEKLY</td>
